[package]
name = "eddsa"
version = "0.1.0"
authors = ["Rohit Narurkar <rohit.narurkar@protonmail.com>"]
edition = "2018"

[dependencies]
algebra = { git = "https://github.com/scipr-lab/zexe/", default-features = false, features = ["full"]}
algebra-core = { git = "https://github.com/scipr-lab/zexe/", features = [ "parallel" ]}
num-traits = { version = "0.2", default-features = true }
rand = "0.7.3"
rand_core = "0.5.1"
sha2 = "0.8.1"
